# dumpbot

./: .env.example  .gitignore  Dockerfile  README.md  WORKERS.md  config.json.example  example-nginx-proxy.conf  extract_and_push.sh  pyproject.toml  redis.conf  requirements.txt  run_arq_worker.py  whitelist.txt  worker_settings.py
.github/workflows/: docker-build.yaml
dumpyarabot/: __init__.py  __main__.py  aria2_manager.py  arq_config.py  arq_jobs.py  auth.py  config.py  dumpyarabot.py  file_utils.py  firmware_downloader.py  firmware_extractor.py  gitlab_manager.py  handlers.py  message_formatting.py  message_queue.py  mockup_handlers.py  moderated_handlers.py  process_utils.py  property_extractor.py  redis_storage.py  schemas.py  storage.py  ui.py  url_utils.py  utils.py
scripts/: format.sh  lint.sh
systemd/: README.md  dumpyarabot-bot.service  dumpyarabot-redis.service  dumpyarabot-worker.service  dumpyarabot-worker@.service  dumpyarabot.target  setup.sh
tests/: conftest.py  test_arq_recovery.py  test_firmware_downloader.py  test_firmware_extractor.py  test_message_formatting.py  test_rich_markdown.py
