[tool.poetry]
name = "dumpyarabot"
version = "0.1.0"
description = "Bot for AndroidDumps"
authors = ["Akhil Narang <me@akhilnarang.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.7"
pydantic = "^2.5.2"
httpx = "^0.25.2"
rich = "^13.7.0"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
mypy = "^1.7.1"
isort = "^5.13.2"
ruff = "^0.1.8"
autoflake = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
