[project]
authors = [
    {name = "Akhil Narang", email = "me@akhilnarang.dev"},
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "python-telegram-bot[job-queue]>=22.7,<23.0",
    "pydantic>=2.12.5,<3.0.0",
    "httpx>=0.28.1,<1.0.0",
    "rich>=14.3.3,<15.0.0",
    "pydantic-settings>=2.13.1,<3.0.0",
    "redis>=5.0.0,<6.0.0",
    "arq>=0.27.0,<1.0.0",
    "pillow>=12.1.1,<13.0.0",
    "pyppmd>=1.3.1",
    "aria2p>=0.12.0,<1.0.0",
]
name = "dumpyarabot"
version = "0.1.0"
description = "Bot for AndroidDumps"
readme = "README.md"

[dependency-groups]
dev = [
    "black>=26.3.1,<27.0.0",
    "mypy>=1.19.1,<2.0.0",
    "isort>=8.0.1,<9.0.0",
    "ruff>=0.15.8,<1.0.0",
    "autoflake>=2.3.3,<3.0.0",
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
    "faker>=40.12.0,<41.0.0",
    "responses>=0.26.0,<1.0.0",
]
